Fix expand all / collapse all not working when object is too big

--- a/src/comps/Styles.scss
+++ b/src/comps/Styles.scss
@@ -1,198 +1,204 @@
+* {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 1.5rem;
+}
+
 body {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .clickable {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .clickable:hover {
-    background-color: #ddf;
+  background-color: #ddf;
 }
 
 .highlight-on-hover:hover {
-    background-color: #eee;
+  background-color: #eee;
 }
 
 .selection-panel {
-    color: #aaa;
-    >* {
-        margin-right: .3rem;
-        input {
-            margin-right: .3rem;
-        }
+  color: #aaa;
+  >* {
+    margin-right: .3rem;
+    input {
+      margin-right: .3rem;
     }
-    .icon {
-        margin-right: 0;
-        padding: 0 .1rem;
-        white-space: pre;
-        input {
-            display: none;
-        }
-        i {
-            font-size: .7rem;
-        }
+  }
+  .icon {
+    margin-right: 0;
+    padding: 0 .1rem;
+    white-space: pre;
+    input {
+      display: none;
     }
-    .icon.checked {
-        color: #000;
-        outline: 1px solid #ddf;
-        background-color: #eef;
+    i {
+      font-size: .7rem;
     }
-    .icon:before {
-        content: '\0020';
-    }
-    .icon:after {
-        content: '\0020';
-    }
-    .icon:hover {
-        background-color: #ddf;
-    }
+  }
+  .icon.checked {
+    color: #000;
+    outline: 1px solid #ddf;
+    background-color: #eef;
+  }
+  .icon:before {
+    content: '\0020';
+  }
+  .icon:after {
+    content: '\0020';
+  }
+  .icon:hover {
+    background-color: #ddf;
+  }
 }
 
 .simple-value {
-    display: inline-block;
-    white-space: pre-wrap;
-    color: #808;
+  display: inline-block;
+  white-space: pre-wrap;
+  color: #808;
 }
 
 .simple-value.string {
-    color: #080;
+  color: #080;
 }
 
 .simple-value.complex {
-    color: #880;
+  color: #880;
 }
 
 .simple-value.link {
-    color: #008;
+  color: #008;
 }
 
 .raw-viewer {
-    padding-left: .5rem;
-    padding-right: .5rem;
-    pre {
-        margin: 0;
-    }
+  padding-left: .5rem;
+  padding-right: .5rem;
+  pre {
+    margin: 0;
+  }
 }
 
 .pretty-print-viewer {
-    font-family: monospace;
-    white-space: pre;
-    padding-left: .5rem;
-    padding-right: .5rem;
+  font-family: monospace;
+  white-space: pre;
+  padding-left: .5rem;
+  padding-right: .5rem;
 }
 
 .json-viewer {
-    .body {
-        padding-top: .5rem;
-        padding-bottom: .5rem;
-    }
+  .body {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
 }
 
 .json-viewer-header {
-    padding: .5rem;
-    background-color: #eee;
-    >* {
-        margin-right: .5rem;
-        input {
-            margin-right: .3rem;
-        }
+  padding: .5rem;
+  background-color: #eee;
+  >* {
+    margin-right: .5rem;
+    input {
+      margin-right: .3rem;
     }
+  }
 }
 
 .root-object-viewer {
-    .header-row {
-        padding-top: .1rem;
-        padding-bottom: .1rem;
-        display: flex;
-        .object-action-bullet {
-            background: #ddd;
-            .icon {
-                color: #000;
-            }
-        }
-        .toolbar {
-            padding-left: .4rem;
-            display: none;
-        }
+  .header-row {
+    padding-top: .1rem;
+    padding-bottom: .1rem;
+    display: flex;
+    .object-action-bullet {
+      background: #ddd;
+      .icon {
+        color: #000;
+      }
     }
-    .header-row:hover {
-        .toolbar {
-            display: flex;
-        }
+    .toolbar {
+      padding-left: .4rem;
+      display: none;
     }
+  }
+  .header-row:hover {
+    .toolbar {
+      display: flex;
+    }
+  }
 }
 
 .object-action-bullet {
-    color: #888;
-    .icon {
-        white-space: pre;
-        min-width: 1rem;
-        text-align: center;
-        padding-right: .5rem;
-        display: inline-block;
-        .fa-circle {
-            font-size: .3rem;
-            transform: translateY(-.15rem);
-        }
-        .fa-chevron-right,
-        .fa-chevron-down {
-            font-size: .7rem;
-        }
+  color: #888;
+  .icon {
+    white-space: pre;
+    min-width: 1rem;
+    text-align: center;
+    padding-right: .5rem;
+    display: inline-block;
+    .fa-circle {
+      font-size: .3rem;
+      transform: translateY(-.15rem);
     }
-    .icon:after {
-        content: '\0020';
+    .fa-chevron-right,
+    .fa-chevron-down {
+      font-size: .7rem;
     }
+  }
+  .icon:after {
+    content: '\0020';
+  }
 }
 
 .object-row-viewer {
-    .value-row {
-        padding-top: .1rem;
-        padding-bottom: .1rem;
-        display: flex;
-        .label {
-            padding-left: .5rem;
-            padding-right: .5rem;
-            font-weight: bold;
-            background-color: #ddd;
-        }
-        .simple-value {
-            padding-left: .7rem;
-            padding-right: .5rem;
-        }
-        .toolbar {
-            padding-left: .4rem;
-            padding-right: 1rem;
-            display: none;
-        }
+  .value-row {
+    padding-top: .1rem;
+    padding-bottom: .1rem;
+    display: flex;
+    .label {
+      padding-left: .5rem;
+      padding-right: .5rem;
+      font-weight: bold;
+      background-color: #ddd;
     }
-    .value-row:hover {
-        .toolbar {
-            display: flex;
-        }
+    .simple-value {
+      padding-left: .7rem;
+      padding-right: .5rem;
     }
+    .toolbar {
+      padding-left: .4rem;
+      padding-right: 1rem;
+      display: none;
+    }
+  }
+  .value-row:hover {
+    .toolbar {
+      display: flex;
+    }
+  }
 }
 
 .object-table-viewer>table {
-    border-collapse: collapse;
-    td,
-    th {
-        border: 1px solid #ddd;
-        vertical-align: top;
+  border-collapse: collapse;
+  td,
+  th {
+    border: 1px solid #ddd;
+    vertical-align: top;
+  }
+  th {
+    background-color: #eee;
+    padding: .1rem .5rem;
+  }
+  td {
+    .simple-value {
+      padding: .1rem .5rem;
     }
-    th {
-        background-color: #eee;
-        padding: .1rem .5rem;
-    }
-    td {
-        .simple-value {
-            padding: .1rem .5rem;
-        }
-    }
+  }
 }
 
 .empty-indicator {
-    padding: .1rem;
-    color: #888;
+  padding: .1rem;
+  color: #888;
 }
